--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,8 @@ build:
   project: Cinegy.TtxDecoder.sln
   publish_nuget: true
   verbosity: minimal
+before_build:
+- cmd: nuget restore
 after_build:
 - cmd: >-
     7z a Cinegy.TtxDecoder-%APPVEYOR_REPO_BRANCH%-%APPVEYOR_BUILD_VERSION%.zip %APPVEYOR_BUILD_FOLDER%\bin\release\Cinegy.TtxDecoder.dll
