-refactor setup interface to allow support for decoding TTX data without tables and descriptors -extending logging to help make some flashing captions clearer to understand

--- a/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
+++ b/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teletext\PageBuffer.cs" />
-    <Compile Include="Teletext\TeleText.cs" />
+    <Compile Include="Teletext\TeleTextPage.cs" />
     <Compile Include="Teletext\TeleTextDecoder.cs" />
     <Compile Include="Teletext\TeleTextSubtitleEventArgs.cs" />
     <Compile Include="Teletext\Utils.cs" />
