--- a/Cinegy.TtxDecoder.Tests/Cinegy.TtxDecoder.Tests.csproj
+++ b/Cinegy.TtxDecoder.Tests/Cinegy.TtxDecoder.Tests.csproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <EmbeddedResource Include="TestStreams\PID_0x0163.bin">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
