--- a/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
+++ b/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
@@ -40,12 +40,22 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Metrics\Metric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Metrics\TeletextMetric.cs" />
     <Compile Include="Teletext\PageBuffer.cs" />
+    <Compile Include="Teletext\TeletextMagazine.cs" />
+    <Compile Include="Teletext\TeletextPacket.cs" />
     <Compile Include="Teletext\TeleTextPage.cs" />
     <Compile Include="Teletext\TeleTextDecoder.cs" />
+    <Compile Include="Teletext\TeletextService.cs" />
     <Compile Include="Teletext\TeleTextSubtitleEventArgs.cs" />
     <Compile Include="Teletext\Utils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\PublicAssemblies\Microsoft.VisualStudio.QualityTools.UnitTestFramework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
