-refactor for consistency in naming -implemented clear as explicit event -metric class now inherits from telemetry library -metric class extended to gather teletext coding statistics -page filtering implemented -refactoring of returning page / magazine numbers from objects

--- a/Cinegy.TtxDecoder/project.json
+++ b/Cinegy.TtxDecoder/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "supports": {},
   "dependencies": {
+    "Cinegy.Telemetry": "2.0.8-alpha1",
     "Cinegy.TsDecoder": "2.0.47-alpha",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
     "NETStandard.Library": "1.6.0"
