--- a/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
+++ b/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
@@ -40,18 +40,17 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Metrics\Metric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Metrics\TeletextMetric.cs" />
     <Compile Include="Teletext\TeletextMagazine.cs" />
     <Compile Include="Teletext\TeletextPacket.cs" />
     <Compile Include="Teletext\TeletextPage.cs" />
-    <Compile Include="Teletext\TeleTextDecoder.cs" />
+    <Compile Include="Teletext\TeletextDecoder.cs" />
     <Compile Include="Teletext\TeletextHeaderPacket.cs" />
     <Compile Include="Teletext\TeletextPageClearedEventArgs.cs" />
     <Compile Include="Teletext\TeletextRow.cs" />
     <Compile Include="Teletext\TeletextService.cs" />
-    <Compile Include="Teletext\TeleTextPageReadyEventArgs.cs" />
+    <Compile Include="Teletext\TeletextPageReadyEventArgs.cs" />
     <Compile Include="Teletext\TeletextPacketFactory.cs" />
     <Compile Include="Teletext\Utils.cs" />
   </ItemGroup>
