--- a/Cinegy.TtxDecoder/project.json
+++ b/Cinegy.TtxDecoder/project.json
@@ -2,9 +2,7 @@
   "supports": {},
   "dependencies": {
     "Cinegy.Telemetry": "2.0.10-alpha1",
-    "Cinegy.TsDecoder": "2.0.47-alpha",
-    "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
-    "NETStandard.Library": "1.6.1"
+    "Cinegy.TsDecoder": "2.0.47-alpha"
   },
   "frameworks": {
     "netstandard1.3": {}
