-move to NET FX 461 and NET Standard 2.0 -move to vs2017 -remove metrics out (will add back into analysis lib

--- a/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
+++ b/Cinegy.TtxDecoder/Cinegy.TtxDecoder.csproj
@@ -1,65 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6EBEC7B5-5ECE-46EB-9534-39A3F9BF91A1}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cinegy.TtxDecoder</RootNamespace>
-    <AssemblyName>Cinegy.TtxDecoder</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
+    <TargetFrameworks>net461;netcoreapp2.0</TargetFrameworks>
+    <Version>2.0.0-beta</Version>
+    <Authors>Lewis Kirkaldie</Authors>
+    <Company>Cinegy GmbH</Company>
+    <Description>A teletext subtitle decoder, in C# using NET Framework 4.6.1 and NET Standard 2.0</Description>
+    <Copyright>Cinegy GmbH</Copyright>
+    <PackageTags>Transport Stream Teletext Subtitle MPEGTS</PackageTags>
+    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Cinegy/TtxDecoder</PackageProjectUrl>
+    <PackageReleaseNotes>Now with multiple builds targetting NET Framework and NET Standard 2.0</PackageReleaseNotes>
+    <NeutralLanguage />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <None Include="Cinegy.TtxDecoder.nuspec" />
-    <None Include="project.json" />
+    <Compile Remove="Metrics\TeletextMetric.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Metrics\TeletextMetric.cs" />
-    <Compile Include="Teletext\TeletextMagazine.cs" />
-    <Compile Include="Teletext\TeletextPacket.cs" />
-    <Compile Include="Teletext\TeletextPage.cs" />
-    <Compile Include="Teletext\TeletextDecoder.cs" />
-    <Compile Include="Teletext\TeletextHeaderPacket.cs" />
-    <Compile Include="Teletext\TeletextPageClearedEventArgs.cs" />
-    <Compile Include="Teletext\TeletextRow.cs" />
-    <Compile Include="Teletext\TeletextService.cs" />
-    <Compile Include="Teletext\TeletextPageReadyEventArgs.cs" />
-    <Compile Include="Teletext\TeletextPacketFactory.cs" />
-    <Compile Include="Teletext\Utils.cs" />
+    <Folder Include="Metrics\" />
+    <Folder Include="Properties\" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
+  <ItemGroup>
+    <PackageReference Include="Cinegy.TsDecoder" Version="3.0.0-beta" />
+  </ItemGroup>
+
 </Project>
