--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,8 @@
 version: 2.0.{build}
+branches:
+  only:
+  - master
+image: Visual Studio 2017
 configuration: Release
 dotnet_csproj:
   patch: true
