--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ configuration: Release
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
-  version: '{version}'
+  version: '{version}-beta'
   package_version: '{version}-beta'
   assembly_version: '{version}'
   file_version: '{version}'
